DX-1000 implement fontawesome

--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "test": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "docker:build": "docker build -t microtema/process-flow-platform-frontend:0.1.0 .",
-    "docker:push": "docker push microtema/process-flow-platform-frontend:0.1.0",
-    "docker:run": "docker run -d --name process-flow-platform -p 4201:4200 microtema/process-flow-platform-frontend:0.1.0",
+    "docker:build": "docker build -t microtema/process-flow-platform-frontend:0.1.1 .",
+    "docker:push": "docker push microtema/process-flow-platform-frontend:0.1.1",
+    "docker:run": "docker run -d --name process-flow-platform -p 4201:4200 microtema/process-flow-platform-frontend:0.1.1",
     "kubectl": "kubectl apply -f deployment.yaml",
     "deploy": "npm run build && npm run docker:build && npm run docker:push && npm run kubectl",
     "clean": "kubectl delete -f deployment.yaml"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
     "html": "^1.0.0",
     "register-service-worker": "^1.7.1",
