--- a/package.json
+++ b/package.json
@@ -8,22 +8,27 @@
     "test": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "docker:build": "docker build -t microtema/process-flow-platform-frontend:0.1.1 .",
-    "docker:push": "docker push microtema/process-flow-platform-frontend:0.1.1",
-    "docker:run": "docker run -d --name process-flow-platform -p 4201:4200 microtema/process-flow-platform-frontend:0.1.1",
+    "docker:build": "docker build -t microtema/process-flow-platform-frontend:0.1.3 .",
+    "docker:push": "docker push microtema/process-flow-platform-frontend:0.1.3",
+    "docker:run": "docker run -d --name process-flow-platform -p 4201:4200 microtema/process-flow-platform-frontend:0.1.3",
     "kubectl": "kubectl apply -f deployment.yaml",
     "deploy": "npm run build && npm run docker:build && npm run docker:push && npm run kubectl",
     "clean": "kubectl delete -f deployment.yaml"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@okta/okta-vue": "^3.1.0",
+    "axios": "^0.19.0",
+    "axios-observable": "^1.1.3",
     "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
     "html": "^1.0.0",
     "register-service-worker": "^1.7.1",
+    "rxjs": "^6.6.3",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
+    "vue-rx": "^6.2.0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -36,7 +41,7 @@
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "^3.12.1",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
@@ -49,6 +54,6 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vue-jest": "^5.0.0-alpha.7"
+    "vue-jest": "^3.0.7"
   }
 }
