--- a/package.json
+++ b/package.json
@@ -8,28 +8,29 @@
     "test": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "docker:build": "docker build -t microtema/process-flow-platform-frontend:0.1.3 .",
-    "docker:push": "docker push microtema/process-flow-platform-frontend:0.1.3",
-    "docker:run": "docker run -d --name process-flow-platform -p 4201:4200 microtema/process-flow-platform-frontend:0.1.3",
+    "docker:build": "docker build -t microtema/process-flow-platform-frontend:0.1.4 .",
+    "docker:push": "docker push microtema/process-flow-platform-frontend:0.1.4",
+    "docker:run": "docker run -d --name process-flow-platform -p 4201:4200 microtema/process-flow-platform-frontend:0.1.4",
     "kubectl": "kubectl apply -f deployment.yaml",
     "deploy": "npm run build && npm run docker:build && npm run docker:push && npm run kubectl",
-    "clean": "kubectl delete -f deployment.yaml"
+    "undeploy": "kubectl delete -f deployment.yaml",
+    "clean": "npm run clean:src && npm run clean:src",
+    "clean:src": "find ./src -name '*.js' -delete && find ./src -name '*.js.*' -delete",
+    "clean:test": "find ./tests -name '*.js' -delete && find ./tests -name '*.js.*' -delete"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
-    "@okta/okta-vue": "^3.1.0",
     "axios": "^0.19.0",
     "axios-observable": "^1.1.3",
     "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
-    "html": "^1.0.0",
     "register-service-worker": "^1.7.1",
     "rxjs": "^6.6.3",
-    "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.0-0",
-    "vue-rx": "^6.2.0",
-    "vuex": "^4.0.0-0"
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
@@ -41,19 +42,23 @@
     "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "^3.12.1",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
+    "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "^2.0.0-beta.13",
+    "@vue/test-utils": "^1.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "node-sass": "^4.12.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "ts-jest": "^24.3.0",
     "typescript": "~3.9.3",
-    "vue-jest": "^3.0.7"
+    "vue-jest": "^3.0.7",
+    "vue-template-compiler": "^2.6.11"
   }
 }
