--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "test": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "docker:build": "docker build -t microtema/process-flow-platform-frontend:0.1.4 .",
-    "docker:push": "docker push microtema/process-flow-platform-frontend:0.1.4",
-    "docker:run": "docker run -d --name process-flow-platform -p 4201:4200 microtema/process-flow-platform-frontend:0.1.4",
+    "docker:build": "docker build -t microtema/process-flow-platform-frontend:0.1.7 .",
+    "docker:push": "docker push microtema/process-flow-platform-frontend:0.1.7",
+    "docker:run": "docker run -d --name process-flow-platform -p 4201:4200 microtema/process-flow-platform-frontend:0.1.7",
     "kubectl": "kubectl apply -f deployment.yaml",
     "deploy": "npm run build && npm run docker:build && npm run docker:push && npm run kubectl",
     "undeploy": "kubectl delete -f deployment.yaml",
@@ -20,12 +20,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@okta/okta-auth-js": "^4.5.1",
+    "@okta/okta-vue": "^3.1.0",
     "axios": "^0.19.0",
     "axios-observable": "^1.1.3",
     "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "rxjs": "^6.6.3",
+    "text-encoding": "^0.7.0",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
@@ -34,6 +37,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/okta__okta-vue": "^1.2.2",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
