DX-1000 clean-code

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,6 +20,11 @@ spec:
           image: microtema/process-flow-platform-frontend:0.1.7
           ports:
             - containerPort: 4200
+          env:
+            - name: OKTA_OAUTH2_ISSUER
+              value: https://dev-1065782.okta.com/oauth2/default
+            - name: OKTA_OAUTH2_CLIENTID
+              value: 0oa3h0mq2kwRxe9hO5d6
 ---
 apiVersion: v1
 kind: Service
